force-app/main/default/objects/Journal_Line_Item__e/Journal_Line_Item__e.object-meta.xml
<CustomObject>
    <label>Journal Line Item</label>
    <pluralLabel>Journal Line Items</pluralLabel>
</CustomObject>