force-app/main/default/objects/Journal_Line_Item__e/fields/Debits__c.field-meta.xml
<CustomField>
    <fullName>Debits__c</fullName>
    <label>Debits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>