force-app/main/default/objects/Journal_Line_Item__e/fields/Journal_Currency__c.field-meta.xml
<CustomField>
    <fullName>Journal_Currency__c</fullName>
    <label>Journal Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>